Refatored IncludeProperties to be jit created